// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockWaiverBanner renders a current time waiver 1`] = `
<div
  aria-labelledby="card-label-:r0:"
  className="c-card c-card--kiwi c-block-waiver-banner c-block-waiver-banner--current c-card--no-focus-or-hover"
>
  <div
    className="c-card__left"
  >
    <div
      className="c-card__left-content"
    >
      <div
        className="c-card__top-row"
      >
        <div
          className="c-card__title"
          id="card-label-:r0:"
        >
          <h3
            className="c-block-waiver-banner__title"
          >
            Dispatcher Note
          </h3>
          <div
            className="c-block-waiver-banner__badge c-block-waiver-banner__badge--current"
          >
            <span>
              <svg
                className="c-icon-alert-circle"
                viewBox="-3 -3 54 54"
              >
                <g
                  className="c-icon-alert-circle--black"
                >
                  <circle
                    className="c-icon-alert-circle__outline"
                    cx="24"
                    cy="24"
                    r="27"
                  />
                  <circle
                    className="c-icon-alert-circle__fill"
                    cx="24"
                    cy="24"
                    r="22.59"
                  />
                  <g
                    className="c-icon-alert-circle__exclamation-point"
                  >
                    <path
                      d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
                    />
                    <path
                      d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
                    />
                  </g>
                </g>
              </svg>
            </span>
            Current
          </div>
        </div>
      </div>
      <div
        className="c-card__contents"
      >
        <div
          className="c-card__body"
        >
          <div
            className="c-properties-list"
          >
            <table
              className="c-properties-list__table"
            >
              <tbody>
                <tr
                  className="c-properties-list__property "
                >
                  <td
                    className="c-properties-list__property-label"
                  >
                    Reason
                  </td>
                  <td
                    className="c-properties-list__property-value"
                  >
                    Block Waiver
                  </td>
                </tr>
                <tr
                  className="c-properties-list__property "
                >
                  <td
                    className="c-properties-list__property-label"
                  >
                    Start Time
                  </td>
                  <td
                    className="c-properties-list__property-value"
                  >
                    3:53 PM
                  </td>
                </tr>
                <tr
                  className="c-properties-list__property "
                >
                  <td
                    className="c-properties-list__property-label"
                  >
                    End Time
                  </td>
                  <td
                    className="c-properties-list__property-value"
                  >
                    4:26 PM
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BlockWaiverBanner renders a future time waiver 1`] = `
<div
  aria-labelledby="card-label-:r1:"
  className="c-card c-card--kiwi c-block-waiver-banner c-block-waiver-banner--future c-card--no-focus-or-hover"
>
  <div
    className="c-card__left"
  >
    <div
      className="c-card__left-content"
    >
      <div
        className="c-card__top-row"
      >
        <div
          className="c-card__title"
          id="card-label-:r1:"
        >
          <h3
            className="c-block-waiver-banner__title"
          >
            Dispatcher Note
          </h3>
          <div
            className="c-block-waiver-banner__badge c-block-waiver-banner__badge--future"
          >
            <span
              className="c-notification-bell-icon--read"
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg/>",
                }
              }
            />
            Upcoming
          </div>
        </div>
      </div>
      <div
        className="c-card__contents"
      >
        <div
          className="c-card__body"
        >
          <div
            className="c-properties-list"
          >
            <table
              className="c-properties-list__table"
            >
              <tbody>
                <tr
                  className="c-properties-list__property "
                >
                  <td
                    className="c-properties-list__property-label"
                  >
                    Reason
                  </td>
                  <td
                    className="c-properties-list__property-value"
                  >
                    Block Waiver
                  </td>
                </tr>
                <tr
                  className="c-properties-list__property "
                >
                  <td
                    className="c-properties-list__property-label"
                  >
                    Start Time
                  </td>
                  <td
                    className="c-properties-list__property-value"
                  >
                    4:26 PM
                  </td>
                </tr>
                <tr
                  className="c-properties-list__property "
                >
                  <td
                    className="c-properties-list__property-label"
                  >
                    End Time
                  </td>
                  <td
                    className="c-properties-list__property-value"
                  >
                    4:43 PM
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BlockWaiverBanner renders a past time waiver 1`] = `
<div
  aria-labelledby="card-label-:r2:"
  className="c-card c-card--kiwi c-block-waiver-banner c-block-waiver-banner--past c-card--no-focus-or-hover c-card--inactive"
>
  <div
    className="c-card__left"
  >
    <div
      className="c-card__left-content"
    >
      <div
        className="c-card__top-row"
      >
        <div
          className="c-card__title"
          id="card-label-:r2:"
        >
          <h3
            className="c-block-waiver-banner__title"
          >
            Dispatcher Note
          </h3>
          <div
            className="c-block-waiver-banner__badge c-block-waiver-banner__badge--past"
          >
            Past
          </div>
        </div>
      </div>
      <div
        className="c-card__contents"
      >
        <div
          className="c-card__body"
        >
          <div
            className="c-properties-list"
          >
            <table
              className="c-properties-list__table"
            >
              <tbody>
                <tr
                  className="c-properties-list__property "
                >
                  <td
                    className="c-properties-list__property-label"
                  >
                    Reason
                  </td>
                  <td
                    className="c-properties-list__property-value"
                  >
                    Block Waiver
                  </td>
                </tr>
                <tr
                  className="c-properties-list__property "
                >
                  <td
                    className="c-properties-list__property-label"
                  >
                    Start Time
                  </td>
                  <td
                    className="c-properties-list__property-value"
                  >
                    3:36 PM
                  </td>
                </tr>
                <tr
                  className="c-properties-list__property "
                >
                  <td
                    className="c-properties-list__property-label"
                  >
                    End Time
                  </td>
                  <td
                    className="c-properties-list__property-value"
                  >
                    3:53 PM
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
